--- a/style.css
+++ b/style.css
@@ -315,3 +315,8 @@ p, ul {
     margin-top: 40px;
     height: 50px;
   }
+
+  .iframe-style {
+    border: 1px #caccd0 solid; 
+    border-radius: 5px;
+  }
