--- a/style.css
+++ b/style.css
@@ -101,6 +101,12 @@ iframe {
     font-size: 3.4vw;
     font-weight: bold;
   }
+
+  .banner h2 {
+    font-size: 18px;
+    font-weight: normal;
+    line-height: 1.43;
+  }
   .banner-logos {
     margin-top: 20px;
     width: 90%;
@@ -118,6 +124,12 @@ iframe {
 
   .section {
     padding: 3% 10% 5%;
+  }
+
+  .section h4 {
+    font-size: 18px;
+    font-weight: normal;
+    line-height: 1.43;
   }
 
   .background-yellow {
@@ -173,11 +185,11 @@ iframe {
     text-align: center;
   }
 
-  .card-module .subtitle {
+  .card-module h2 {
     color: white;
     font-size: 14px;
+    margin: 0;
   }
-
   
   .card-module > img {
     height: 200px;
@@ -185,15 +197,13 @@ iframe {
     object-fit: cover;
   }
   
-  .card-module h2 {
-    font-size: 16px;
-    font-weight: bold;
-    margin: 0;
-  }
-  
-  .card-module p {
+
+  .card-module h3 {
     font-size: 12px;
     color: rgb(34, 34, 34);
+    font-weight: normal;
+    line-height: 1.43;
+    margin: 0px 0px 10px 0px;
   }
 
   .card-module .card-title {
@@ -277,28 +287,28 @@ iframe {
     top: 10px;
     left: 10px;
   }
-  .card-event-date h2 {
-    font-size: 16px;
-    font-weight: bold;
-    margin: 5px;
 
-  }
-  .card-event-date h3 {
+  .card-event-date h2 {
     font-size: 12px;
     font-weight: bold;
     color: #01459B;
-    margin-top: 10px;
-    
+    margin: 10px 0px 0px 0px;
   }
-  .card-event-date p {
+  .card-event-date h3 {
     font-size: 10px;
-    /*opacity: 0.7;*/
     font-weight: lighter;
     color: #01459B;
+    margin: 0px 0px 15px 0px;
   }
- 
+  .card-event-date p {
+    font-size: 16px;
+    font-weight: bold;
+    margin: 2px;
+
+  }
+  
   #footer {
-    height: 100px;
+    height: 150px;
     text-align: center;
     padding: 20px 0px;
   }
@@ -306,6 +316,18 @@ iframe {
   #footer p {
     font-weight: bold;
     font-size: 14px;
+    margin: 5px 0px 5px 0px;
+  }
+
+  #footer a {
+    font-weight: bold;
+    font-size: 12px;
+    color: rgb(1, 69, 155);
+    margin: 5px 0px 5px 0px;
+    text-decoration: none;
+  }
+  #footer a:hover {
+    color: rgba(1, 69, 155, .8);
   }
 
   #footer img {
@@ -315,4 +337,12 @@ iframe {
   .iframe-style {
     border: 1px #caccd0 solid; 
     border-radius: 5px;
+  }
+
+  .legal h1 {
+    margin: 30px 0px;
+  }
+
+  .legal h2 {
+    margin: 50px 0px 10px 0px;
   }
