--- a/style.css
+++ b/style.css
@@ -226,6 +226,11 @@ iframe {
     border-radius: 5px;
   }
 
+  .image-section p {
+    margin-top: 10px;
+    font-size: 12px;
+  }
+
   .card-product {
     border-radius: 5px;
     padding: 0px 16px 32px 16px;
